--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,33 @@
 spring:
   application:
     name: chat-service
+  datasource:
+    url: jdbc:mysql://localhost:3308/chat_service
+    username: chat_service_user
+    password: chat_service_user
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  security:
+    oauth2:
+      client:
+        registration:
+          kakao:
+            client-id: 46edd7cef54702700646d89e7101132b #앱키 > rest-api key
+            client-secret: 2XypmAFEcbXVd9Mfwj4YUjw3SCiqpS02 #보안 코드
+            scope:
+              - profile_nickname
+              - account_email
+              - name
+              - gender
+              - birthday
+              - birthyear
+              - phone_number
+            redirect-uri: "http://localhost:8080/login/oauth2/code/kakao"
+            client-name: kakao
+            authorization-grant-type: authorization_code
+            client-authentication-method: client_secret_post
+        provider:
+          kakao:
+            authorization-uri: https://kauth.kakao.com/oauth/authorize
+            token-uri: https://kauth.kakao.com/oauth/token
+            user-info-uri: https://kapi.kakao.com/v2/user/me
+            user-name-attribute: id
